crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_042.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 433438
    entity_type: Vehicle
    position:
      x: 679.5142211914063
      y: 0
      z: -442.7965087890625
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 8
            - 12
            - 23
            - 24
          - []
          - []
          - []
        paramsId: 3874661584
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 41200
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 41200
      maxServerSpeedRaw: 858690
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 433437
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 180
        - 62
        - 199
        - 43
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 44
        - 92
        - 211
        - 208
        - 172
        - 95
        - 211
        - 208
        - 44
        - 86
        - 211
        - 208
        - 172
        - 86
        - 211
        - 208
        - 172
        - 93
        - 211
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 5
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 114
        - 254
        - 176
        - 207
        - 66
        - 254
        - 1
        - 0
        - 0
        - 0
        - 208
        - 236
        - 150
        - 229
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 242
        - 254
        - 176
        - 159
        - 210
        - 254
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 1
        - 0
        - 0
        - 0
        - 176
        - 239
        - 13
        - 255
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 79
        - 255
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 15
        - 254
        - 176
        - 239
        - 111
        - 253
        - 26
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 38
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4470
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4470
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -0.22702915966510773
    space_id: 0
    spec_idx: 2
    state_length: 408
    vehicle_id: 2840
