crates/wows-replays/tests/snapshots/20260223_115252_PZSC718-Narai_s06_Atoll/packet_snapshots__packet_043.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 201870
    entity_type: InteractiveZone
    position:
      x: 169.40200805664063
      y: 0
      z: -339.39300537109375
    props:
      componentsState:
        captureLogic:
          bothInside: 0
          captureSpeed: 1
          captureTime: 40
          hasInvaders: 0
          invaderTeam: -1
          isEnabled: 0
          isVisible: 0
          progress: 0
        controlPoint:
          buoyVisualId: 4293248944
          index: 5
          nextControlPoint: -1
          timerName: []
          type: 1
      innerRadius: 0
      interactionBuoyancies:
        - 0
      name:
        - 53
        - 48
        - 54
        - 51
        - 57
        - 67
        - 52
        - 55
        - 46
        - 52
        - 67
        - 54
        - 55
        - 50
        - 50
        - 51
        - 70
        - 46
        - 50
        - 66
        - 56
        - 70
        - 69
        - 55
        - 66
        - 51
        - 46
        - 65
        - 56
        - 70
        - 68
        - 55
        - 70
        - 65
        - 49
      ownerId: 0
      radius: 66
      teamId: 1
      type: 9
      useRing: 0
      visualState:
        forAllies: 0
        forEnemies: 0
        forOwner: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: 0
    space_id: 0
    spec_idx: 14
    state_length: 101
    vehicle_id: 2840
